# specai

./: .dockerignore  .gitignore  AGENTS.md  BOOTSTRAP_SELF_PROCESS.md  Cargo.toml  Containerfile  README.md  SETUP.md  VERIFY.md  config.graph.example.toml  config.graph.toml.example  config.lmstudio.toml  config.multi_model.example.toml  config.multi_model.toml.example  config.openai.example.toml  config.toml  config.toml.example  spec-ai.config.toml
.cargo/: config.toml.example
.github/: CI.Dockerfile
.github/workflows/: ci.yml  release.yml
crates/spec-ai/: Cargo.toml  README.md  spec-ai.config.toml
crates/spec-ai-api/: Cargo.toml  README.md
crates/spec-ai-cli/: Cargo.toml  README.md
crates/spec-ai-cli/src/: lib.rs
crates/spec-ai-config/: Cargo.toml  README.md
crates/spec-ai-config/src/: lib.rs  test_utils.rs  types.rs
crates/spec-ai-config/src/config/: agent_config.rs  cache.rs  mod.rs
crates/spec-ai-config/src/persistence/: mod.rs
crates/spec-ai-core/: Cargo.toml  README.md
crates/spec-ai-core/src/: test_utils.rs
crates/spec-ai-core/src/agent/: builder.rs  core.rs
crates/spec-ai-core/src/bootstrap_self/plugins/: rust_cargo.rs  toak_tokenizer.rs  universal_code.rs
crates/spec-ai-core/src/cli/: mod.rs
crates/spec-ai-core/src/sync/: engine.rs  protocol.rs
crates/spec-ai-core/src/tools/: mod.rs  plugin_adapter.rs
crates/spec-ai-core/src/tools/builtin/: code_search.rs  file_extract.rs  mod.rs
crates/spec-ai-knowledge-graph/: Cargo.toml  README.md
crates/spec-ai-knowledge-graph/src/: graph_store.rs  lib.rs  types.rs  vector_clock.rs
crates/spec-ai-plugin/: Cargo.toml
crates/spec-ai-plugin/examples/greeting_plugin/: Cargo.toml
crates/spec-ai-plugin/examples/greeting_plugin/src/: lib.rs
crates/spec-ai-plugin/src/: abi.rs  error.rs  lib.rs  loader.rs
crates/spec-ai-policy/: Cargo.toml  README.md
crates/spec-ai-policy/src/policy/: mod.rs
crates/spec-ai-tui/: Cargo.toml
crates/spec-ai-tui/examples/: demo.rs
crates/spec-ai-tui/examples/demo/: handlers.rs  models.rs  state.rs  ui.rs
crates/spec-ai-tui/src/: lib.rs
crates/spec-ai-tui/src/app/: framework.rs  mod.rs
crates/spec-ai-tui/src/buffer/: buffer.rs  cell.rs  mod.rs
crates/spec-ai-tui/src/event/: event_loop.rs  input.rs  mod.rs
crates/spec-ai-tui/src/geometry/: mod.rs  point.rs  rect.rs  size.rs
crates/spec-ai-tui/src/layout/: constraint.rs  direction.rs  flex.rs  mod.rs
crates/spec-ai-tui/src/style/: color.rs  mod.rs  modifier.rs  style.rs  styled.rs  text_utils.rs
crates/spec-ai-tui/src/terminal/: backend.rs  mod.rs  raw_mode.rs
crates/spec-ai-tui/src/theme/: mod.rs  palette.rs
crates/spec-ai-tui/src/widget/: focus.rs  mod.rs  traits.rs
crates/spec-ai-tui/src/widget/builtin/: block.rs  editor.rs  input.rs  mod.rs  overlay.rs  paragraph.rs  slash_menu.rs  status.rs
crates/spec-ai/src/: main.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  GRAPH_SYNC.md  VERIFY.md
examples/: basic_agent.rs  graph_steering_demo.rs  knowledge_graph.rs  multi_model_performance.rs  test_prompt_user.rs
scripts/: bump-version.sh  publish-ci-image.sh  publish.sh  run_spec.sh
spec/: README.md  digital_consciousness.spec  emergent_collaboration.spec  impossible_interview.spec  poetry_in_types.spec  recursive_improvement.spec  smoke.spec
specs/: README.md  code_archaeologist.spec  quantum_debugger.spec  time_traveler.spec
src/: bootstrap_self.rs  embeddings.rs  lib.rs  main.rs  spec.rs  types.rs
src/agent/: builder.rs  core.rs  factory.rs  function_calling.rs  mod.rs  model.rs  output.rs  transcription.rs  transcription_factory.rs
src/agent/providers/: lmstudio.rs  mlx.rs  mock.rs  mod.rs  openai.rs
src/agent/transcription_providers/: mock.rs  mod.rs  vttrs.rs
src/api/: handlers.rs  mesh.rs  mod.rs  models.rs  server.rs  sync.rs  sync_handlers.rs
src/bootstrap_self/: plugin.rs  registry.rs
src/bootstrap_self/plugins/: mod.rs  rust_cargo.rs  toak_tokenizer.rs  universal_code.rs
src/cli/: formatting.rs  mod.rs
src/config/: agent.rs  agent_config.rs  cache.rs  mod.rs  registry.rs
src/persistence/: migrations.rs  mod.rs
src/policy/: mod.rs
src/sync/: coordinator.rs  engine.rs  mod.rs  resolver.rs  vector_clock.rs
src/tools/: mod.rs
src/tools/builtin/: audio_transcription.rs  bash.rs  calculator.rs  file_extract.rs  file_read.rs  file_write.rs  graph.rs  mesh_communication.rs  mod.rs  prompt.rs  search.rs  shell.rs  web_scraper.rs  web_search.rs
tests/: audio_transcription_tests.rs  bootstrap_self_tests.rs  cli_tests.rs  config_tests.rs  graph_degree_tests.rs  graph_integration_tests.rs  persistence_tests.rs  policy_integration_tests.rs  spec_integration_tests.rs  tool_integration_tests.rs  universal_code_plugin_tests.rs
vm/: Test.Containerfile
