[package]
name = "spec-ai"
version = "0.1.16"
edition = "2021"
description = "A framework for building AI agents with structured outputs, policy enforcement, and execution tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geoffsee/spec-ai"
documentation = "https://docs.rs/spec-ai"
keywords = ["ai", "agents", "llm", "policy", "framework"]
categories = ["development-tools"]

[lib]
name = "spec_ai"
path = "src/lib.rs"

[dependencies]
duckdb = { version = "1.0", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "io-std", "sync", "process"] }
async-trait = "0.1"
tempfile = "3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
async-stream = "0.3"
futures = "0.3"
regex = "1.10"
walkdir = "2"
base64 = "0.22"
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
async-openai = "0.30.1"
termimad = "0.30"
crossterm = "0.28"
terminal_size = "0.4"
extractous = "0.3.0"

[features]
default = ["openai", "lmstudio"]
openai = ["reqwest"]
anthropic = ["reqwest"]
ollama = ["reqwest"]
mlx = ["reqwest"]
lmstudio = ["reqwest"]
api = ["axum", "tower", "tower-http", "axum-extra"]

[dev-dependencies]
serial_test = "3"
