[package]
name = "spec-ai"
version = "0.3.7"
edition = "2021"
description = "A framework for building AI agents with structured outputs, policy enforcement, and execution tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geoffsee/spec-ai"
documentation = "https://docs.rs/spec-ai"
keywords = ["ai", "agents", "llm", "policy", "framework"]
categories = ["development-tools"]

[lib]
name = "spec_ai"
path = "src/lib.rs"

[dependencies]
duckdb = { version = "1", default-features = false }
libduckdb-sys = "1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "io-std", "sync", "process"] }
async-trait = "0.1"
tempfile = "3"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
async-stream = "0.3"
futures = "0.3"
regex = "1.10"
walkdir = "2"
base64 = "0.22"
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
async-openai = "0.30.1"
termimad = "0.30"
crossterm = "0.28"
terminal_size = "0.4"
extractous = { version = "0.3.0" }
spider = { version = "2", optional = true }
html-escape = "0.2"
vtt-rs = "0.1.3"
toak-rs = "4.0.8"
blake3 = "1.5"
hostname = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

[features]
default = ["bundled", "openai", "lmstudio", "web-scraping", "vttrs", "api"]
bundled = ["duckdb/bundled"]
duck-sys = []
openai = ["reqwest"]
anthropic = ["reqwest"]
ollama = ["reqwest"]
mlx = ["reqwest"]
lmstudio = ["reqwest"]
vttrs = []
api = ["axum", "tower", "tower-http", "axum-extra"]
axum-extra = ["dep:axum-extra"]
web-scraping = ["spider"]
integration-tests = []

[dev-dependencies]
serial_test = "3"

# Performance optimizations
[profile.release]
opt-level = 3          # Maximum optimizations
lto = "fat"            # Full link-time optimization
codegen-units = 1      # Better optimization at cost of compile time
strip = true           # Remove debug symbols for smaller binary
panic = "abort"        # Smaller binary, no unwinding

[profile.dev]
opt-level = 1          # Some optimization for faster dev builds
