[workspace]
members = [
    "crates/spec-ai",
    "crates/spec-ai-core",
    "crates/spec-ai-config",
    "crates/spec-ai-policy",
    "crates/spec-ai-api",
    "crates/spec-ai-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.9"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geoffsee/spec-ai"
documentation = "https://docs.rs/spec-ai"
description = "A framework for building AI agents with structured outputs, policy enforcement, and execution tracking"
keywords = ["ai", "agents", "llm", "policy", "framework"]
categories = ["development-tools"]

[workspace.dependencies]
anyhow = "1.0"
async-openai = "0.30.1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", default-features = true }
axum-extra = { version = "0.9", features = ["typed-header"] }
base64 = "0.22"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
duckdb = { version = "1", default-features = false }
extractous = "0.3.0"
futures = "0.3"
hostname = "0.4"
html-escape = "0.2"
libduckdb-sys = "1"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3"
spider = "2"
tempfile = "3"
terminal_size = "0.4"
thiserror = "1.0"
toak-rs = "4.0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "io-std", "sync", "process"] }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
walkdir = "2"
vtt-rs = "0.1.3"
termimad = "0.30"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
