[package]
name = "spec-ai-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API for spec-ai framework"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
spec-ai-core = { path = "../spec-ai-core", version = "0.5.0", features = ["api"] }
spec-ai-config = { path = "../spec-ai-config", version = "0.5.0" }
spec-ai-policy = { path = "../spec-ai-policy", version = "0.5.0" }
