[package]
name = "spec-ai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["openai", "lmstudio", "web-scraping", "vttrs", "api"]
bundled = ["spec-ai-config/bundled"]
duck-sys = ["spec-ai-config/duck-sys"]
openai = ["spec-ai-core/openai"]
anthropic = ["spec-ai-core/anthropic"]
ollama = ["spec-ai-core/ollama"]
mlx = ["spec-ai-core/mlx"]
lmstudio = ["spec-ai-core/lmstudio"]
vttrs = ["spec-ai-core/vttrs"]
web-scraping = ["spec-ai-core/web-scraping"]
integration-tests = ["spec-ai-core/integration-tests"]
api = ["dep:spec-ai-api", "spec-ai-core/api"]
axum-extra = ["api"]

[dependencies]
spec-ai-core = { path = "../spec-ai-core", version = "0.5.0" }
spec-ai-config = { path = "../spec-ai-config", version = "0.5.0" }
spec-ai-policy = { path = "../spec-ai-policy", version = "0.5.0" }
spec-ai-api = { path = "../spec-ai-api", version = "0.5.0", optional = true }

chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
