[package]
name = "spec-ai-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for spec-ai framework"

[features]
default = []
bundled = ["duckdb/bundled"]
duck-sys = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
duckdb = { workspace = true, default-features = false }
spec-ai-knowledge-graph = { path = "../spec-ai-knowledge-graph", version = "0.5.0" }
libduckdb-sys = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
tempfile.workspace = true
