[package]
name = "spec-ai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for spec-ai framework"

[features]
default = []
openai = ["reqwest"]
anthropic = ["reqwest"]
ollama = ["reqwest"]
mlx = ["reqwest"]
lmstudio = ["reqwest"]
vttrs = []
web-scraping = ["spider"]
integration-tests = []
api = ["reqwest"]

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
extractous = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
html-escape = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
spider = { workspace = true, optional = true }
tempfile = { workspace = true }
termimad = { workspace = true }
terminal_size = { workspace = true }
thiserror = { workspace = true }
toak-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
vtt-rs = { workspace = true }
spec-ai-config = { path = "../spec-ai-config", version = "0.4.8" }
spec-ai-policy = { path = "../spec-ai-policy", version = "0.4.8" }
