[package]
name = "spec-ai-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for custom tools in spec-ai"

[features]
default = []
# For plugin authors - minimal dependencies
plugin-api = []

[dependencies]
abi_stable = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
