[package]
name = "spec-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["bundled", "openai", "lmstudio", "web-scraping", "vttrs", "api"]
bundled = ["spec-ai-config/bundled"]
duck-sys = ["spec-ai-config/duck-sys"]
openai = ["spec-ai-core/openai"]
anthropic = ["spec-ai-core/anthropic"]
ollama = ["spec-ai-core/ollama"]
mlx = ["spec-ai-core/mlx"]
lmstudio = ["spec-ai-core/lmstudio"]
vttrs = ["spec-ai-core/vttrs"]
web-scraping = ["spec-ai-core/web-scraping"]
integration-tests = ["spec-ai-core/integration-tests"]
api = ["dep:spec-ai-api", "spec-ai-core/api"]
axum-extra = ["api"]

[[bin]]
name = "spec-ai"
path = "src/main.rs"

[dependencies]
spec-ai-core = { path = "../spec-ai-core", version = "0.4.9" }
spec-ai-config = { path = "../spec-ai-config", version = "0.4.9" }
spec-ai-policy = { path = "../spec-ai-policy", version = "0.4.9" }
spec-ai-api = { path = "../spec-ai-api", version = "0.4.9", optional = true }

# CLI dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
