[package]
name = "spec-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["openai", "lmstudio", "web-scraping", "vttrs", "api", "cli"]
bundled = ["spec-ai-config/bundled"]
duck-sys = ["spec-ai-config/duck-sys"]
openai = ["spec-ai-core/openai"]
anthropic = ["spec-ai-core/anthropic"]
ollama = ["spec-ai-core/ollama"]
mlx = ["spec-ai-core/mlx"]
lmstudio = ["spec-ai-core/lmstudio"]
vttrs = ["spec-ai-core/vttrs"]
web-scraping = ["spec-ai-core/web-scraping"]
integration-tests = ["spec-ai-core/integration-tests"]
api = ["dep:spec-ai-api", "spec-ai-core/api"]
cli = ["dep:spec-ai-cli"]
axum-extra = ["api"]

[[bin]]
name = "spec-ai"
path = "src/main.rs"

[dependencies]
spec-ai-core = { path = "../spec-ai-core", version = "0.4.15" }
spec-ai-config = { path = "../spec-ai-config", version = "0.4.15" }
spec-ai-policy = { path = "../spec-ai-policy", version = "0.4.15" }
spec-ai-api = { path = "../spec-ai-api", version = "0.4.15", optional = true }
spec-ai-cli = { path = "../spec-ai-cli", version = "0.4.15", optional = true }

anyhow = { workspace = true }
